--- a/src/resource/views/partials/adminSidebar.hbs
+++ b/src/resource/views/partials/adminSidebar.hbs
@@ -1,6 +1,6 @@
 <div class="admin-sidebar-container">
   <div class="admin-account">
-    <img src="https://scontent.fhan14-1.fna.fbcdn.net/v/t39.30808-6/407842795_816972246897281_6146221013070996008_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeEOTJ6a9Y5eJBfwa6N0_lQ-RTSqpruNgfZFNKqmu42B9uQbv6DfHeIPanb061IGVIezorkFPofMERZj-gFOglE4&_nc_ohc=MmwZ5w7WdKwAX928kX4&_nc_ht=scontent.fhan14-1.fna&oh=00_AfAi4KDMU0-BhcJ9zMGIYkCr2agkHpXANg1qWf0Ip3RQPA&oe=65F3CE5A" />
+    <img src="../../img/admin.jpg" />
     <div>
       <p>Xin chào Quỳnh Ly,</p>
       <p id="welcome-text"></p>
