--- a/src/resource/views/users/updateProfile.hbs
+++ b/src/resource/views/users/updateProfile.hbs
@@ -188,7 +188,7 @@
             {{this.status}}
           </td>
           <td>
-            <a href="/order/{{this._id}}">Chi Tiết</a>
+            <a href="/order/{{this._id}}">Xem Chi Tiết</a>
           </td>
         </tr>
         {{/each}}
