--- a/src/public/css/adminOrder.css
+++ b/src/public/css/adminOrder.css
@@ -1,51 +1,38 @@
 .order-details-container {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   gap: 10px;
 
-  .title, .info-group, .product-group {
+  table {
     width: 100%;
-    background-color: white;
-    height: max-content;
-    padding: 10px;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    margin-top: 10px;
-  }
+    border-spacing: 0px 10px;
 
-  .title {
-    justify-content: center;
-    font-size: larger;
-    font-weight: bolder;
-    height: 50px;
-  }
-
-  .info-group, .product-group {
-    gap: 5px;
-    
-    title, label {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border-radius: 10px;
-      padding: 10px;
-    }
-
-    title {
+    thead {
       background-color: #D1A6A6;
-    }
-    
-    label {
-      border: 1px solid #D1A6A6;
-      margin-block-start: 0;
-      margin-block-end: 0;
+      height: 50px;
+      font-weight: bolder;
+      text-align: center;
     }
 
-    input {
-      display: none;
+    tbody {
+      td {
+        height: 50px;
+        border-bottom: 1px solid black;
+        padding: 5px 0;
+
+        label {
+          padding: 5px;
+          border-radius: 5px;
+          cursor: pointer;
+        }
+
+        input {
+          display: none;
+        }
+      }
     }
   }
 
