--- a/src/public/css/userOrder.css
+++ b/src/public/css/userOrder.css
@@ -5,46 +5,37 @@
   flex-direction: column;
   gap: 10px;
 
-  .title, .info-group, .product-group {
+  .title {
     width: 90%;
     background-color: white;
-    height: max-content;
     padding: 10px;
     border-radius: 10px;
     display: flex;
     align-items: center;
-  }
-
-  .title {
     justify-content: center;
     font-size: larger;
     font-weight: bolder;
     height: 50px;
   }
 
-  .info-group, .product-group {
-    gap: 5px;
-    
-    title, p, button {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border-radius: 10px;
-      padding: 10px;
-    }
+  table {
+    width: 70%;
+    border-spacing: 0px 10px;
+    padding: 0px 10px;
 
-    title {
+    thead {
       background-color: #D1A6A6;
-    }
-    
-    p {
-      border: 1px solid #D1A6A6;
-      margin-block-start: 0;
-      margin-block-end: 0;
+      height: 50px;
+      font-weight: bolder;
+      text-align: center;
     }
 
-    button {
-      border: 1px solid #D1A6A6;
+    tbody {
+      td {
+        height: 50px;
+        border-bottom: 1px solid black;
+        padding: 5px 0;
+      }
     }
   }
 }
