--- a/src/public/css/userUpdateProfile.css
+++ b/src/public/css/userUpdateProfile.css
@@ -87,7 +87,7 @@
       input:not(input[type='radio']) {
         width: 100%;
         height: 40px;
-        border: 1px solid #D1A6A6;
+        border: 1px solid black;
         border-radius: 5px;
         text-indent: 10px;
       }
