--- a/src/resource/views/admin/allProducts.hbs
+++ b/src/resource/views/admin/allProducts.hbs
@@ -47,7 +47,7 @@
           <p>{{this.name}}</p>
         </td>
         <td style="width: 10%;">{{this.categories}}</td>
-        <td style="width: 10%;">{{this.price}}</td>
+        <td style="width: 10%;">{{this.price}} đ</td>
         <td style="width: 10%;">
           <a href="/admin/updating/{{this._id}}" class="update-button"><button>Sửa</button></a>
           <button id="{{this._id}}" onclick="reply_click(this.id)">Xoá</button>
