--- a/src/resource/views/admin/create.hbs
+++ b/src/resource/views/admin/create.hbs
@@ -120,7 +120,7 @@
 
     <div class="form-group">
       <label>Ảnh Sản Phẩm</label>
-      <input type="file" name="avatar" id="avatar"/>
+      <input type="file" name="img" id="img"/>
     </div>
     <div class="submit-button">
       <button title="submit" type="submit">Đăng</button>
