--- a/src/resource/views/admin/home.hbs
+++ b/src/resource/views/admin/home.hbs
@@ -1,3 +1,18 @@
 <div class="admin-home-container">
   <h1>xin chao admin</h1>
+  <h1>Thống kê</h1>
+  <div class="order-info">
+    <span>Đơn hàng đang xử lý</span>
+    <span>Đơn hàng đang giao</span>
+    <span>Đơn hàng đã hoàn thành</span>
+  </div>
+  <div class="product-info">
+    <span>Sản phẩm đang có</span>
+    <span>Sản phẩm đ</span>
+    <span>đơn hàng đã hoàn thành</span>
+  </div>
+  <div class="finance-info">
+    <span>Tổng doanh thu</span>
+    <span>Đơn có doanh thu cao nhất</span>
+  </div>
 </div>
