--- a/src/resource/views/admin/trash.hbs
+++ b/src/resource/views/admin/trash.hbs
@@ -36,7 +36,7 @@
               align-items: center
               "
         >
-          <img src="../uploads/{{this.avatar}}">
+          <img src="{{this.img}}">
           <p>{{this.name}}</p>
         </td>
         <td style="width: 10%;">{{this.categories}}</td>
