--- a/src/resource/views/users/allProducts.hbs
+++ b/src/resource/views/users/allProducts.hbs
@@ -19,7 +19,7 @@
     {{#each newProduct}}
       <div class="product">
         <a href="/product/{{this.slug}}">
-          <img src="../../uploads/{{this.avatar}}" alt="">
+          <img src="{{this.img}}" alt="">
           <p id="product-price">{{this.price}}đ</p>
           <p id="product-details">{{this.name}}</p>
         </a>
