--- a/src/resource/views/users/home.hbs
+++ b/src/resource/views/users/home.hbs
@@ -12,7 +12,7 @@
     {{#each flashDealProduct}}
     <a href="/product/{{this.slug}}">
       <div class="product">
-        <img src="uploads/{{this.avatar}}" alt="" id="product-1">
+        <img src="{{this.img}}" alt="" id="product-1">
         <p id="product-price">{{this.price}}đ</p>
         <p id="product-details">{{this.name}}</p>
       </div>
@@ -31,7 +31,7 @@
     {{#each hotProduct}}
     <a href="/product/{{this.slug}}">
       <div class="product">
-        <img src="uploads/{{this.avatar}}" alt="" id="product-1">
+        <img src="{{this.img}}" alt="" id="product-1">
         <p id="product-price">{{this.price}}đ</p>
         <p id="product-details">{{this.name}}</p>
       </div>
@@ -50,7 +50,7 @@
     {{#each allProduct}}
     <a href="/product/{{this.slug}}">
       <div class="product">
-        <img src="uploads/{{this.avatar}}" alt="" id="product-1">
+        <img src="{{this.img}}" alt="" id="product-1">
         <p id="product-price">{{this.price}}đ</p>
         <p id="product-details">{{this.name}}</p>
       </div>
