--- a/src/resource/views/users/introduce.hbs
+++ b/src/resource/views/users/introduce.hbs
@@ -1,5 +1,5 @@
 <div class="introduce-container">
-    <h2><image src="../../../img/full_logo.jpg"/> Xin chào các bạn đã đến với BunnyStore - Thế giới mỹ phẩm của mình!</h2>
+    <h2><image src="../../../img/full_logo.jpg"/></h2>
     
     <div>
       <image src="../../../img/logo.jpg"/>
