--- a/src/resource/views/users/newArrival.hbs
+++ b/src/resource/views/users/newArrival.hbs
@@ -12,7 +12,7 @@
   <div class="all-products">
     {{#each product}}
       <div class="product">
-        <a href="/product/{{this.slug}}">
+        <a href="{{this.img}}">
           <img src="../uploads/{{this.avatar}}" alt="">
           <p id="product-price">{{this.price}}đ</p>
           <p id="product-details">{{this.name}}</p>
