--- a/src/resource/views/users/ordersChecking.hbs
+++ b/src/resource/views/users/ordersChecking.hbs
@@ -25,7 +25,7 @@
             // if matched, submit form and pass value to URL for backend
             getForm.setAttribute('method', 'get')
             getForm.setAttribute('action', `/all-orders/checking/${orderCode}`)
-            getForm.onsubmit = function () { }
+            getForm.submit()
         }
         else {
             // if not matched, prevent submit, enter again
