--- a/src/resource/views/users/product.hbs
+++ b/src/resource/views/users/product.hbs
@@ -10,7 +10,7 @@
       </div>
 
       <div class="image">
-        <img src="../uploads/{{product.avatar}}" />
+        <img src="{{product.img}}" />
       </div>
     </div>
     
