--- a/src/resource/views/admin/create.hbs
+++ b/src/resource/views/admin/create.hbs
@@ -86,7 +86,12 @@
     </div>
 
     <div class="form-group">
-      <input type="text" class="form-control" id="price" name="price" placeholder="Giá Sản Phẩm">
+      <input type="text" class="form-control" id="oldPrice" name="oldPrice" placeholder="Giá Cũ Sản Phẩm">
+      <span class="form-message"></span>
+    </div>
+
+    <div class="form-group">
+      <input type="text" class="form-control" id="price" name="price" placeholder="Giá Mới Sản Phẩm">
       <span class="form-message"></span>
     </div>
 
