--- a/src/resource/views/admin/updateProduct.hbs
+++ b/src/resource/views/admin/updateProduct.hbs
@@ -5,7 +5,7 @@
     </div>
 
     <div class="form-group">
-      <label for="categories">Loại gì nhể</label>
+      <label for="categories">Loại Sản Phẩm</label>
       <select name="categories">
         <option value="">-- Chọn --</option>
         <option value="skincare">Skincare</option>
@@ -77,37 +77,43 @@
     </div>
 
     <div class="form-group">
-      <label for="brand">Hãng gì nhể</label>
+      <label for="brand">Hãng</label>
       <input type="text" class="form-control" id="brand" value="{{product.brand}}" name="brand" >
       <span class="form-message"></span>
     </div>
 
     <div class="form-group">
-      <label for="name">Tên gì nhể</label>
+      <label for="name">Tên</label>
       <input type="text" class="form-control" id="name" value="{{product.name}}" name="name">
       <span class="form-message"></span>
     </div>
 
     <div class="form-group">
-      <label for="price">Giá bao nhiêu nhể</label>
+      <label for="price">Giá cũ</label>
+      <input type="text" class="form-control" id="price" value="{{product.oldPrice}}" name="oldPrice">
+      <span class="form-message"></span>
+    </div>
+
+    <div class="form-group">
+      <label for="price">Giá mới</label>
       <input type="text" class="form-control" id="price" value="{{product.price}}" name="price">
       <span class="form-message"></span>
     </div>
 
     <div class="form-group">
-      <label for="description">Mô tả như nào nhể</label>
+      <label for="description">Mô tả</label>
       <input type="text" class="form-control" id="description" value="{{product.description}}" name="description">
       <span class="form-message"></span>
     </div>
 
     <div class="form-group">
-      <label for="details">Chi tiết ra sao nhể</label>
+      <label for="details">Chi tiết</label>
       <input type="text" class="form-control" id="details" value="{{product.details}}" name="details">
       <span class="form-message"></span>
     </div>
 
     <div class="form-group">
-      <label for="hotsale">Có hot không nhể</label>
+      <label for="hotsale">Độ Hot</label>
       <select name="hotsale">
         <option value="no">Bình thường</option>
         <option value="flash-sale">Đang Flash Sale</option>
@@ -116,7 +122,7 @@
     </div>
 
     <div class="form-group">
-      <label for="newArrival">Mới ra à</label>
+      <label for="newArrival">Độ Mới</label>
       <select name="newArrival">
         <option value="no">Ra lâu rồi</option>
         <option value="yes">Chuẩn luôn</option>
@@ -124,8 +130,8 @@
     </div>
 
     <div class="form-group">
-      <label for="details">Cuối cùng thì cho xin nốt cái ảnh</label>
-      <input type="file" name="img" id="img" value="{{product.avatar}}"/>
+      <label for="details">Ảnh</label>
+      <input type="file" name="img" id="img" value="{{product.img}}"/>
     </div>
     <div class="submit-button">
       <button title="submit" type="submit">Hoàn thành</button>
