--- a/src/resource/views/users/home.hbs
+++ b/src/resource/views/users/home.hbs
@@ -13,6 +13,7 @@
     <a href="/product/{{this.slug}}">
       <div class="product">
         <img src="{{this.img}}" alt="" id="product-1">
+        <p id="product-old-price"><del>{{this.oldPrice}}đ </del></p>
         <p id="product-price">{{this.price}}đ</p>
         <p id="product-details">{{this.name}}</p>
       </div>
