--- a/src/resource/views/users/product.hbs
+++ b/src/resource/views/users/product.hbs
@@ -151,7 +151,7 @@
         slug: `{{product.slug}}`,
         name: `{{product.name}}`,
         price: `{{product.price}}`,
-        image: `{{product.avatar}}`,
+        image: `{{product.img}}`,
         quantity: getQuantityValue.innerText
       };
 
@@ -193,7 +193,7 @@
         slug: `{{product.slug}}`,
         name: `{{product.name}}`,
         price: `{{product.price}}`,
-        image: `{{product.avatar}}`,
+        image: `{{product.img}}`,
         quantity: getQuantityValue.innerText
       };
 
